# spacetraders

./: .gitignore  CLAUDE.md  CLI-PRIMER.md  ENGINEERING.md  PLAYBOOK.md  README.md  RULINGS.md  afo2tgesslofladagb8bplocfgth2r9v.darc  docker-compose.metrics.yml  eos9omdg3kcndebtoocvc7fftigcmdqb  hfsmlpudlsgipsug017gqbngnkgqnei0  issues.jsonl  jpctn8isuvdhbn9dk6vdpuidfjlm3iev  manifest  mus3dgkh7jthmodhdfbthh5prm4dcufc.darc  query_waypoints.py  setup.py  spacetraders  spcffrvbfbi8tondhggjq9kjf3nv3ohf.darc  sync_waypoints_script.py
bot/: .coverage  .coveragerc  .gitignore  AGENT_ARCHITECTURE.md  AGENT_ARCHITECTURE_V2.md  AGENT_DESIGN_DECISIONS.md  ARCHITECTURE.md  BDD_OVERLAP_ANALYSIS.md  BDD_REORGANIZATION_STATUS.md  BDD_TRADING_MODULE_SUMMARY.md  BUG_FIX_REPORT_CARGO_CLEANUP.md  BUG_FIX_REPORT_CARGO_OVERFLOW.md  BUG_FIX_REPORT_CHECKPOINT_LOCATION_VALIDATION.md  BUG_FIX_REPORT_CIRCUIT_BREAKER_SELECTIVE_SALVAGE.md  BUG_FIX_REPORT_CONTRACT_PROFITABILITY_REAL_PRICES.md  BUG_FIX_REPORT_DRIFT_MODE_SHORT_TRIP.md  BUG_FIX_REPORT_FINAL.md  BUG_FIX_REPORT_FLEET_TRADE_OPTIMIZER.md  BUG_FIX_REPORT_INTERMEDIATE_REFUEL.md  BUG_FIX_REPORT_ORTOOLS_MARKET_DROPPING.md  BUG_FIX_REPORT_PRICE_IMPACT_MODEL.md  BUG_FIX_REPORT_RESIDUAL_CARGO.md  BUG_FIX_REPORT_SCOUT_COORDINATOR.md  BUG_FIX_REPORT_SCOUT_PRICE_MAPPING.md  BUG_FIX_REPORT_STARHOPPER1_TRADING_LOSSES.md  BUG_FIX_REPORT_TRADE_PLAN_WRONG_PRICE_FIELD.md  BUG_FIX_REPORT_TRADE_ROUTE_PROFIT_CALCULATION.md  BUG_FIX_REPORT_TRANSACTION_LIMIT_AND_API_RETRIES.md  BUG_LIFECYCLE.md  BUG_REPORTING_GUIDE.md  BUG_REPORT_SHIP_ASSIGNMENTS.md  CLAUDE.md  COVERAGE_REPORT.md  DDD_NAMING_ANALYSIS.md  DDD_REFACTOR_COMPLETE.md  FIRST_MATE_PROTOCOL.md  FRONTEND_PLAYER_ID_BUG_FIX.md  GAME_GUIDE.md  INTEGRATION_COMPLETE.md  MCP_MULTI_PLAYER_SETUP.md  (+62 more)
bot/.obsidian/: workspace.json
bot/agents/: PRACTICAL_WORKFLOW_EXAMPLE.md  first_mate_prompt.md  scout_config_X1-JB26.json  scout_config_X1-JD30.json  scout_config_X1-TEST.json
bot/alembic/: env.py
bot/analysis/: multileg_trade_price_analysis_STARGAZER-11_1760243544169.md
bot/config/: routing_constants.yaml
bot/docs/: BDD_MIGRATION_PLAN.md  BUG_FIX_REPORT_CACHE_PREVENTION.md  CACHE_PREVENTION_FIX.md  CAPTAIN_LOG_TEMPLATE.md  CARGO_UNKNOWN_BUG_FIX.md  CIRCUIT_BREAKER_SMART_SKIP_DESIGN.md  DAEMON_ERROR_LOGGING_INVESTIGATION.md  DAEMON_JSON_FIX.md  DATABASE_POSTGRESQL_SUPPORT.md  DRIFT_MODE_BUG_FIX.md  GO_MIGRATION_ARCHITECTURE.md  HYBRID_CACHING_PLAN.md  IMMEDIATE_CONTAINER_STOP.md  IMPLEMENTATION_PLAN.md  LOGGING_ARCHITECTURE_DIAGRAM.md  MARKET_LIQUIDITY_EXPERIMENT.md  MCP_SCOUT_MARKETS_MIGRATION.md  MINING_OPERATIONS_ARCHITECTURE.md  OPPORTUNISTIC_REFUELING_FIX.md  PHASE_1_COMPLETION.md  PHASE_4_COMPLETE_ALL_MIGRATED.md  PHASE_4_COMPLETION_SUMMARY.md  PHASE_4_UNIT_TEST_CATEGORIZATION.md  PHASE_5_COMPLETE.md  PYTEST_COVERAGE_RESEARCH.md  (+21 more)
(+4019 files in other folders)
