[project]
name = "spacetraders-mcp-server"
version = "1.0.0"
description = "MCP server for SpaceTraders bot operations"
authors = [{name = "SpaceTraders Bot Team"}]
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-bdd>=6.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lib", "operations"]

[project.scripts]
spacetraders-mcp = "mcp_server:main"
