[project]
name = "spacetraders-mcp-server"
version = "1.0.0"
description = "MCP server for SpaceTraders bot operations"
authors = [{name = "SpaceTraders Bot Team"}]
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.0",
    "ortools>=9.8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-bdd>=6.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["spacetraders_bot*", "lib*"]
exclude = ["tests*"]

[project.scripts]
spacetraders-bot = "spacetraders_bot.cli:main"
spacetraders-mcp = "spacetraders_bot.integrations.mcp_bridge:main"
