[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacetraders"
version = "2.0.0"
description = "SpaceTraders autonomous fleet management (V2)"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "ortools>=9.7.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-bdd>=6.1.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
spacetraders = "adapters.primary.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring real API (deselect with '-m \"not integration\"')",
]
addopts = "-m 'not slow and not integration'"
filterwarnings = [
    "ignore::DeprecationWarning:.*importlib._bootstrap",
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
]
